--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Landed by HTML5 UP</title>
+	<title>Codigo Tecnica</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -20,25 +20,16 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Codigo tecnica</a></h1>
+			<h1 id="logo"><a href="index.html">Codigo Tecnica</a></h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li>
-						<a href="#">Layouts</a>
+						<a href="#">Services</a>
 						<ul>
 							<li><a href="left-sidebar.html">Left Sidebar</a></li>
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							<li><a href="no-sidebar.html">No Sidebar</a></li>
-							<li>
-								<a href="#">Submenu</a>
-								<ul>
-									<li><a href="#">Option 1</a></li>
-									<li><a href="#">Option 2</a></li>
-									<li><a href="#">Option 3</a></li>
-									<li><a href="#">Option 4</a></li>
-								</ul>
-							</li>
 						</ul>
 					</li>
 					<li><a href="elements.html">Elements</a></li>
@@ -51,9 +42,9 @@
 		<section id="banner">
 			<div class="content">
 				<header>
-					<h2>Welcome to Codigo tecnica</h2>
+					<h2>Welcome to Codigo Tecnica</h2>
 					<div class="highlights">
-						<div class="iam">we build</div>
+						<div class="iam">Services</div>
 						<div class="text"></div>
 					</div>
 				</header>
@@ -70,23 +61,15 @@
 					<div class="row">
 						<div class="col-4 col-12-medium">
 							<header>
-								<h2>Odio faucibus ipsum integer consequat</h2>
-								<p>Nascetur eu nibh vestibulum amet gravida nascetur praesent</p>
+								<h2>Codigo Tecnica Corporation.LLP (CTC)</h2>
+								<p>Founded on December 31, 2021, Codigo Tecnica Corporation LLP is a rapidly growing company offering excellent services to its valued I.T. and I.T.E.S clients.</p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>Feugiat accumsan lorem eu ac lorem amet sed accumsan donec.
-								Blandit orci porttitor semper. Arcu phasellus tortor enim mi
-								nisi praesent dolor adipiscing. Integer mi sed nascetur cep aliquet
-								augue varius tempus lobortis porttitor accumsan consequat
-								adipiscing lorem dolor.</p>
+							<p>To provide high-quality services at the best price to our precious customers. Build and nurture lasting relationships with our customers. Always respond instantly to the evolving needs of our customers. Achieve full customer satisfaction by offloading work with minimal time. Take all the feedback and act the same positively in order to improve our service continuously.</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>Morbi enim nascetur et placerat lorem sed iaculis neque ante
-								adipiscing adipiscing metus massa. Blandit orci porttitor semper.
-								Arcu phasellus tortor enim mi mi nisi praesent adipiscing. Integer
-								mi sed nascetur cep aliquet augue varius tempus. Feugiat lorem
-								ipsum dolor nullam.</p>
+							<p>Our company provides a variety of services related to information technology (e.g., designing and developing websites, designing and developing software, referencing, etc.)and ITES (e.g., data entry, data extraction, and various types of work-related to AI, text, video, audio and image annotation)</p>
 						</div>
 					</div>
 				</div>
@@ -134,46 +117,46 @@
 		<section id="four" class="wrapper style1 special fade-up">
 			<div class="container">
 				<header class="major">
-					<h2>Accumsan sed tempus adipiscing blandit</h2>
-					<p>Iaculis ac volutpat vis non enim gravida nisi faucibus posuere arcu consequat</p>
+					<h2>Our Services</h2>
+					<p>Our service portfolio covers an entire software development life cycle and meets varied business needs</p>
 				</header>
 				<div class="box alt">
 					<div class="row gtr-uniform">
 						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-chart-area"></span>
-							<h3>Ipsum sed commodo</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+							<span class="icon solid alt major fa-globe"></span>
+							<h3>Web Development & Designing</h3>
+							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-comment"></span>
-							<h3>Eleifend lorem ornare</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+							<span class="icon solid alt major fa-mobile"></span>
+							<h3>App/Software Development</h3>
+							<!-- <p>Developing And Desigining Apps</p> -->
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-flask"></span>
-							<h3>Cubilia cep lobortis</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-paper-plane"></span>
-							<h3>Non semper interdum</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+							<span class="icon solid alt major fa-database"></span>
+							<h3>Data Management</h3>
+							<!-- <p>Developing And Designing Softwares</p> -->
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
 							<span class="icon solid alt major fa-file"></span>
-							<h3>Odio laoreet accumsan</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+							<h3>Annotation Services</h3>
+							<!-- <p>Want to build your product with a team</p> -->
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-lock"></span>
-							<h3>Massa arcu accumsan</h3>
-							<p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p>
+							<span class="icon solid alt major fa-palette"></span>
+							<h3>UI/UX Desigining</h3>
+							<!-- <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p> -->
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall">
+							<span class="icon solid alt major fa-language"></span>
+							<h3>Transcription/Translation</h3>
+							<!-- <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p> -->
 						</section>
 					</div>
 				</div>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="#" class="button">Magna sed feugiat</a></li>
+						<!-- <li><a href="#" class="button">Magna sed feugiat</a></li> -->
 					</ul>
 				</footer>
 			</div>
@@ -218,7 +201,7 @@
 	<!-- Scripts -->
 	<script>
 		var typing = new Typed(".text", {
-			strings: ["", "Youtuber", "Freelancer", "Graphics Designer", "Web Designer", "Web Developer"],
+			strings: ["", "Web Devlopment", "Freelance Work", "Graphics Designing", "Web Desigining", "App Development", "Annotation"],
 			typeSpeed: 40,
 			backDelay: 2000,
 			backSpeed: 40,
