--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
 
 		<!-- Header -->
 		<header id="header">
-			<h1 id="logo"><a href="index.html">Codigo Tecnica</a></h1>
+			<h1 id="logo">
+				<a href="index.html">
+					<img class="logo-img" src="./images/logo-transparent.png" width="50px" alt="">
+				</a>
+				<!-- <a href="index.html">Codigo Tecnica</a> -->
+			</h1>
 			<nav id="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
@@ -164,20 +169,13 @@
 
 		<!-- Five -->
 		<section id="five" class="wrapper style2 special fade">
-			<div class="container">
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1842.3759740133262!2d88.35946685791016!3d22.550962973424408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277efa4907f01%3A0x57fee0864c692db4!2sPark%20Street!5e0!3m2!1sen!2sin!4v1661276350675!5m2!1sen!2sin" width="100%" height="450" style="border:0; filter: invert(93%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<!-- <div class="container">
 				<header>
 					<h2>Magna faucibus lorem diam</h2>
 					<p>Ante metus praesent faucibus ante integer id accumsan eleifend</p>
 				</header>
-				<form method="post" action="#" class="cta">
-					<div class="row gtr-uniform gtr-50">
-						<div class="col-8 col-12-xsmall"><input type="email" name="email" id="email"
-								placeholder="Your Email Address" /></div>
-						<div class="col-4 col-12-xsmall"><input type="submit" value="Get Started" class="fit primary" />
-						</div>
-					</div>
-				</form>
-			</div>
+			</div> -->
 		</section>
 
 		<!-- Footer -->
