--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
             <li>Certified Scrum Masters in-house to ensure on-budget & in-time delivery.</li>
             <li>Project Management Office to oversee web development projects of any complexity.</li>
             <li>Quick project start (1-2 weeks).</li>
+            <li>Fast project delivery</li>
           </ul>
 				</header>
 				<!-- <ul class="actions">
