--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li>
-						<a href="#four">Services</a>
+						<a href="#four" class="scrolly">Services</a>
 						<!-- <ul>
 							<li><a href="left-sidebar.html">Left Sidebar</a></li>
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							<li><a href="no-sidebar.html">No Sidebar</a></li>
 						</ul> -->
 					</li>
-					<li><a href="#five">About</a></li>
+					<li><a href="#five" class="scrolly">About</a></li>
 					<li><a href="#" class="button primary">Join</a></li>
 				</ul>
 			</nav>
