added exprience section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			</h1>
 			<nav id="nav">
 				<ul>
-					<li><a href="index.html">Home</a></li>
+					<li><a href="#banner" class="scrolly">Home</a></li>
 					<li>
 						<a href="#four" class="scrolly">Services</a>
 						<!-- <ul>
@@ -108,7 +108,7 @@
 			<div class="content">
 				<header>
 					<h2>Services We Offer</h2>
-					<p>Codigo Tecica’s experience in custom web software development covers everything from a simple content management system to the most complex enterprise web applications, workflow interfaces & e-commerce portals. From architecture to functionality design and security to support, we offer well-rounded services for your web development needs.</p>
+					<p class="service-we-offer">Codigo Tecica’s experience in custom web software development covers everything from a simple content management system to the most complex enterprise web applications, workflow interfaces & e-commerce portals. From architecture to functionality design and security to support, we offer well-rounded services for your web development needs.</p>
 				</header>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
@@ -165,6 +165,33 @@
 				</footer>
 			</div>
 		</section>
+		<section id="four-copy" class="wrapper style1 special fade-up">
+			<div class="container">
+				<header class="major">
+					<h2>Work Experience</h2>
+					<p>“Life experience is the new work experience.”</p>
+				</header>
+				<div class="box alt">
+					<div class="row gtr-uniform">
+						<section class="col-4 col-6-medium col-12-xsmall experience-box">
+							<span class="icon solid alt major fa-globe"></span>
+							<h3 class="exprience-heading">100+ Project</h3>
+							<p style="color:rgb(214, 214, 214)">All projects are delivered at the precise moment.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall experience-box">
+							<span class="icon solid alt major fa-mobile"></span>
+							<h3 class="exprience-heading">75+ Happy clients</h3>
+							<p style="color:white">All customers are pleased and satisfied.</p>
+						</section>
+						<section class="col-4 col-6-medium col-12-xsmall experience-box">
+							<span class="icon solid alt major fa-database"></span>
+							<h3 class="exprience-heading">One Years Of Experience</h3>
+							<p style="color:white">Long-term customer trust.</p>
+						</section>
+					</div>
+				</div>
+			</div>
+		</section>
 
 		<!-- Five -->
 		<section id="five" class="wrapper style2 special fade">
@@ -199,7 +226,7 @@
 	<!-- Scripts -->
 	<script>
 		var typing = new Typed(".text", {
-			strings: ["", "Web Devlopment", "Freelance Work", "Graphics Designing", "Web Desigining", "App Development", "Annotation"],
+			strings: ["", "Web Devlopment", "App Development", "Graphics Designing","Freelance Work", "Annotation"],
 			typeSpeed: 40,
 			backDelay: 2000,
 			backSpeed: 40,
