--- a/index.html
+++ b/index.html
@@ -67,14 +67,22 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>Codigo Tecnica Corporation.LLP (CTC)</h2>
-								<p>Founded on December 31, 2021, Codigo Tecnica Corporation LLP is a rapidly growing company offering excellent services to its valued I.T. and I.T.E.S clients.</p>
+								<p>Founded on December 31, 2021, Codigo Tecnica Corporation LLP is a rapidly growing
+									company offering excellent services to its valued I.T. and I.T.E.S clients.</p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>To provide high-quality services at the best price to our precious customers. Build and nurture lasting relationships with our customers. Always respond instantly to the evolving needs of our customers. Achieve full customer satisfaction by offloading work with minimal time. Take all the feedback and act the same positively in order to improve our service continuously.</p>
+							<p>To provide high-quality services at the best price to our precious customers. Build and
+								nurture lasting relationships with our customers. Always respond instantly to the
+								evolving needs of our customers. Achieve full customer satisfaction by offloading work
+								with minimal time. Take all the feedback and act the same positively in order to improve
+								our service continuously.</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>Our company provides a variety of services related to information technology (e.g., designing and developing websites, designing and developing software, referencing, etc.)and ITES (e.g., data entry, data extraction, and various types of work-related to AI, text, video, audio and image annotation)</p>
+							<p>Our company provides a variety of services related to information technology (e.g.,
+								designing and developing websites, designing and developing software, referencing,
+								etc.)and ITES (e.g., data entry, data extraction, and various types of work-related to
+								AI, text, video, audio and image annotation)</p>
 						</div>
 					</div>
 				</div>
@@ -89,11 +97,11 @@
 				<header>
 					<h2>Why Codigo Tecnica</h2>
 					<ul>
-            <li>Certified Scrum Masters in-house to ensure on-budget & in-time delivery.</li>
-            <li>Project Management Office to oversee web development projects of any complexity.</li>
-            <li>Quick project start (1-2 weeks).</li>
-            <li>Fast project delivery</li>
-          </ul>
+						<li>Certified Scrum Masters in-house to ensure on-budget & in-time delivery.</li>
+						<li>Project Management Office to oversee web development projects of any complexity.</li>
+						<li>Quick project start (1-2 weeks).</li>
+						<li>Fast project delivery</li>
+					</ul>
 				</header>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
@@ -108,7 +116,11 @@
 			<div class="content">
 				<header>
 					<h2>Services We Offer</h2>
-					<p class="service-we-offer">Codigo Tecica’s experience in custom web software development covers everything from a simple content management system to the most complex enterprise web applications, workflow interfaces & e-commerce portals. From architecture to functionality design and security to support, we offer well-rounded services for your web development needs.</p>
+					<p class="service-we-offer">Codigo Tecica’s experience in custom web software development covers
+						everything from a simple content management system to the most complex enterprise web
+						applications, workflow interfaces & e-commerce portals. From architecture to functionality
+						design and security to support, we offer well-rounded services for your web development needs.
+					</p>
 				</header>
 				<!-- <ul class="actions">
 					<li><a href="#" class="button">Learn More</a></li>
@@ -122,7 +134,8 @@
 			<div class="container">
 				<header class="major">
 					<h2>Our Services</h2>
-					<p>Our service portfolio covers an entire software development life cycle and meets varied business needs</p>
+					<p>Our service portfolio covers an entire software development life cycle and meets varied business
+						needs</p>
 				</header>
 				<div class="box alt">
 					<div class="row gtr-uniform">
@@ -171,8 +184,8 @@
 					<h2>Work Experience</h2>
 					<p>“Life experience is the new work experience.”</p>
 				</header>
-				<div class="box alt">
-					<div class="row gtr-uniform">
+				<div class="box alt ">
+					<div class="row gtr-uniform service-all-box">
 						<section class="col-4 col-6-medium col-12-xsmall experience-box">
 							<span class="icon solid alt major fa-globe"></span>
 							<h3 class="exprience-heading">100+ Project</h3>
@@ -195,7 +208,10 @@
 
 		<!-- Five -->
 		<section id="five" class="wrapper style2 special fade">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1842.3759740133262!2d88.35946685791016!3d22.550962973424408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277efa4907f01%3A0x57fee0864c692db4!2sPark%20Street!5e0!3m2!1sen!2sin!4v1661276350675!5m2!1sen!2sin" width="100%" height="450" style="border:0; filter: invert(93%);" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<iframe
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1842.3759740133262!2d88.35946685791016!3d22.550962973424408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277efa4907f01%3A0x57fee0864c692db4!2sPark%20Street!5e0!3m2!1sen!2sin!4v1661276350675!5m2!1sen!2sin"
+				width="100%" height="450" style="border:0; filter: invert(93%);" allowfullscreen="" loading="lazy"
+				referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<!-- <div class="container">
 				<header>
 					<h2>Magna faucibus lorem diam</h2>
@@ -208,15 +224,20 @@
 		<footer id="footer">
 			<ul class="icons">
 				<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li> -->
-				<li><a href="https://www.facebook.com/Codigo-Tecnica-Corporation-LLP-109539685098863" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="https://www.linkedin.com/in/codigo-tecnica-corporation-llp-703180240/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-				<li><a href="https://www.instagram.com/codigo.tecnica/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="https://github.com/codigotecnica" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-				<li><a href="mailto:hr@codigotecnica.co.in" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+				<li><a href="https://www.facebook.com/Codigo-Tecnica-Corporation-LLP-109539685098863"
+						class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+				<li><a href="https://www.linkedin.com/in/codigo-tecnica-corporation-llp-703180240/"
+						class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<li><a href="https://www.instagram.com/codigo.tecnica/" class="icon brands alt fa-instagram"><span
+							class="label">Instagram</span></a></li>
+				<li><a href="https://github.com/codigotecnica" class="icon brands alt fa-github"><span
+							class="label">GitHub</span></a></li>
+				<li><a href="mailto:hr@codigotecnica.co.in" class="icon solid alt fa-envelope"><span
+							class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>&copy; Copyright Codigo Tecnica Corporation. LLP. All Rights Reserved
-          Designed by Codigo Tecnica Corporation. LLP</li>
+					Designed by Codigo Tecnica Corporation. LLP</li>
 				<!-- <li>Design: <a href="http://html5up.net">HTML5 UP</a></li> -->
 			</ul>
 		</footer>
@@ -226,7 +247,7 @@
 	<!-- Scripts -->
 	<script>
 		var typing = new Typed(".text", {
-			strings: ["", "Web Devlopment", "App Development", "Graphics Designing","Freelance Work", "Annotation"],
+			strings: ["", "Web Devlopment", "App Development", "Graphics Designing", "Freelance Work", "Annotation"],
 			typeSpeed: 40,
 			backDelay: 2000,
 			backSpeed: 40,
