make light mode

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" />
 	</noscript>
+	<link rel="stylesheet" href="assets/css/style.css" />
 </head>
-
 <body class="is-preload landing">
 	<div id="page-wrapper">
 
@@ -47,7 +47,7 @@
 		<section id="banner">
 			<div class="content">
 				<header>
-					<h2>Welcome to Codigo Tecnica</h2>
+					<h2 class="banner-heading">Welcome to Codigo Tecnica</h2>
 					<div class="highlights">
 						<div class="iam">Services</div>
 						<div class="text"></div>
@@ -67,19 +67,19 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>Codigo Tecnica Corporation.LLP (CTC)</h2>
-								<p>Founded on December 31, 2021, Codigo Tecnica Corporation LLP is a rapidly growing
+								<p  class="paragraph">Founded on December 31, 2021, Codigo Tecnica Corporation LLP is a rapidly growing
 									company offering excellent services to its valued I.T. and I.T.E.S clients.</p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>To provide high-quality services at the best price to our precious customers. Build and
+							<p  class="paragraph">To provide high-quality services at the best price to our precious customers. Build and
 								nurture lasting relationships with our customers. Always respond instantly to the
 								evolving needs of our customers. Achieve full customer satisfaction by offloading work
 								with minimal time. Take all the feedback and act the same positively in order to improve
 								our service continuously.</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p>Our company provides a variety of services related to information technology (e.g.,
+							<p class="paragraph">Our company provides a variety of services related to information technology (e.g.,
 								designing and developing websites, designing and developing software, referencing,
 								etc.)and ITES (e.g., data entry, data extraction, and various types of work-related to
 								AI, text, video, audio and image annotation)</p>
@@ -189,17 +189,17 @@
 						<section class="col-4 col-6-medium col-12-xsmall experience-box">
 							<span class="icon solid alt major fa-globe"></span>
 							<h3 class="exprience-heading">100+ Project</h3>
-							<p style="color:rgb(214, 214, 214)">All projects are delivered at the precise moment.</p>
+							<p class="paragraph" style="color:rgb(0, 0, 0)">All projects are delivered at the precise moment.</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall experience-box">
 							<span class="icon solid alt major fa-mobile"></span>
 							<h3 class="exprience-heading">75+ Happy clients</h3>
-							<p style="color:white">All customers are pleased and satisfied.</p>
+							<p class="paragraph" style="color:rgb(0, 0, 0)">All customers are pleased and satisfied.</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall experience-box">
 							<span class="icon solid alt major fa-database"></span>
 							<h3 class="exprience-heading">One Years Of Experience</h3>
-							<p style="color:white">Long-term customer trust.</p>
+							<p class="paragraph"  style="color:rgb(0, 0, 0)">Long-term customer trust.</p>
 						</section>
 					</div>
 				</div>
@@ -210,7 +210,7 @@
 		<section id="five" class="wrapper style2 special fade">
 			<iframe
 				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1842.3759740133262!2d88.35946685791016!3d22.550962973424408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277efa4907f01%3A0x57fee0864c692db4!2sPark%20Street!5e0!3m2!1sen!2sin!4v1661276350675!5m2!1sen!2sin"
-				width="100%" height="450" style="border:0; filter: invert(93%);" allowfullscreen="" loading="lazy"
+				width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
 				referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<!-- <div class="container">
 				<header>
