service box modified

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	</noscript>
 	<link rel="stylesheet" href="assets/css/style.css" />
 </head>
+
 <body class="is-preload landing">
 	<div id="page-wrapper">
 
@@ -67,19 +68,22 @@
 						<div class="col-4 col-12-medium">
 							<header>
 								<h2>Codigo Tecnica Corporation.LLP (CTC)</h2>
-								<p  class="paragraph">Founded on December 31, 2021, Codigo Tecnica Corporation LLP is a rapidly growing
+								<p class="paragraph">Founded on December 31, 2021, Codigo Tecnica Corporation LLP is a
+									rapidly growing
 									company offering excellent services to its valued I.T. and I.T.E.S clients.</p>
 							</header>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p  class="paragraph">To provide high-quality services at the best price to our precious customers. Build and
+							<p class="paragraph">To provide high-quality services at the best price to our precious
+								customers. Build and
 								nurture lasting relationships with our customers. Always respond instantly to the
 								evolving needs of our customers. Achieve full customer satisfaction by offloading work
 								with minimal time. Take all the feedback and act the same positively in order to improve
 								our service continuously.</p>
 						</div>
 						<div class="col-4 col-12-medium">
-							<p class="paragraph">Our company provides a variety of services related to information technology (e.g.,
+							<p class="paragraph">Our company provides a variety of services related to information
+								technology (e.g.,
 								designing and developing websites, designing and developing software, referencing,
 								etc.)and ITES (e.g., data entry, data extraction, and various types of work-related to
 								AI, text, video, audio and image annotation)</p>
@@ -137,37 +141,80 @@
 					<p>Our service portfolio covers an entire software development life cycle and meets varied business
 						needs</p>
 				</header>
-				<div class="box alt">
-					<div class="row gtr-uniform">
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-globe"></span>
-							<h3>Web Development & Designing</h3>
+				<div class="ontainer">
+					<div class="service-box-container">
+							<section class="service-box heiglight">
+								<div class="info">
+									<h3>Web Development & Designing</h3>
+									<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+										Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
+										rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor
+										eligendi
+										deserunt saepe. Nobis eaque.</p>
+								</div>
+								<div class="img"
+									style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+								<!-- <p>Developing And Designing Websites</p> -->
+							</section>
+						<section class="service-box">
+							<div class="info">
+								<h3>App/Software Development</h3>
+								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
+									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
+									deserunt saepe. Nobis eaque.</p>
+							</div>
+							<div class="img"
+								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
 							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-mobile"></span>
-							<h3>App/Software Development</h3>
-							<!-- <p>Developing And Desigining Apps</p> -->
+						<section class="service-box">
+							<div class="info">
+								<h3>Data Management</h3>
+								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
+									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
+									deserunt saepe. Nobis eaque.</p>
+							</div>
+							<div class="img"
+								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-database"></span>
-							<h3>Data Management</h3>
-							<!-- <p>Developing And Designing Softwares</p> -->
+						<section class="service-box">
+							<div class="info">
+								<h3>Annotation Services</h3>
+								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
+									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
+									deserunt saepe. Nobis eaque.</p>
+							</div>
+							<div class="img"
+								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-file"></span>
-							<h3>Annotation Services</h3>
-							<!-- <p>Want to build your product with a team</p> -->
+						<section class="service-box">
+							<div class="info">
+								<h3>UI/UX Desigining</h3>
+								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
+									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
+									deserunt saepe. Nobis eaque.</p>
+							</div>
+							<div class="img"
+								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-palette"></span>
-							<h3>UI/UX Desigining</h3>
-							<!-- <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p> -->
-						</section>
-						<section class="col-4 col-6-medium col-12-xsmall">
-							<span class="icon solid alt major fa-language"></span>
-							<h3>Transcription/Translation</h3>
-							<!-- <p>Feugiat accumsan lorem eu ac lorem amet accumsan donec. Blandit orci porttitor.</p> -->
+						<section class="service-box heiglight">
+							<div class="info">
+								<h3>Transcription/Translation</h3>
+								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
+									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
+									deserunt saepe. Nobis eaque.</p>
+							</div>
+							<div class="img"
+								style="background: url('./images/pic004.jpg') no-repeat center center/cover;"></div>
+							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
 					</div>
 				</div>
@@ -189,7 +236,8 @@
 						<section class="col-4 col-6-medium col-12-xsmall experience-box">
 							<span class="icon solid alt major fa-globe"></span>
 							<h3 class="exprience-heading">100+ Project</h3>
-							<p class="paragraph" style="color:rgb(0, 0, 0)">All projects are delivered at the precise moment.</p>
+							<p class="paragraph" style="color:rgb(0, 0, 0)">All projects are delivered at the precise
+								moment.</p>
 						</section>
 						<section class="col-4 col-6-medium col-12-xsmall experience-box">
 							<span class="icon solid alt major fa-mobile"></span>
@@ -199,7 +247,7 @@
 						<section class="col-4 col-6-medium col-12-xsmall experience-box">
 							<span class="icon solid alt major fa-database"></span>
 							<h3 class="exprience-heading">One Years Of Experience</h3>
-							<p class="paragraph"  style="color:rgb(0, 0, 0)">Long-term customer trust.</p>
+							<p class="paragraph" style="color:rgb(0, 0, 0)">Long-term customer trust.</p>
 						</section>
 					</div>
 				</div>
