--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
 							<li><a href="no-sidebar.html">No Sidebar</a></li>
 						</ul> -->
 					</li>
+					<li><a href="#five" class="scrolly">Case Study</a></li>
+					<li><a href="#five" class="scrolly">Career</a></li>
+					<li><a href="#five" class="scrolly">Contact Us</a></li>
 					<li><a href="#five" class="scrolly">About</a></li>
+
 					<li><a href="#" class="button primary">Join</a></li>
 				</ul>
 			</nav>
