--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
 	<!-- Scripts -->
 	<script>
 		var typing = new Typed(".text", {
-			strings: ["", "Web Devlopment", "App Development", "Graphics Designing", "Freelance Work", "Annotation"],
+			strings: ["", "Web Development", "App Development", "Graphics Designing", "Freelance Work", "Annotation"],
 			typeSpeed: 40,
 			backDelay: 2000,
 			backSpeed: 40,
