update map and some ui

--- a/index.html
+++ b/index.html
@@ -179,10 +179,7 @@
 						<section class="service-box" data-aos="slide-left">
 							<div class="info">
 								<h3>Data Management</h3>
-								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
-									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
-									deserunt saepe. Nobis eaque.</p>
+								<p class="service_para">To help you manage your giant data, we provide a comprehensive data management service. We have a great team in data management who will manage your data and give you a beautiful view of your data like graphs, statistics and more.</p>
 							</div>
 							<div class="img"
 								style="background: url('./images/data-management.jpg') no-repeat center center/cover;">
@@ -192,23 +189,20 @@
 						<section class="service-box" data-aos="slide-right">
 							<div class="info">
 								<h3>Annotation Services</h3>
-								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
-									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
-									deserunt saepe. Nobis eaque.</p>
+								<p class="service_para">
+									Are you looking for image processing and video processing, and other annotation services? Our expert team also provides different kinds of annotation services like image, video, text.</p>
 							</div>
 							<div class="img"
-								style="background: url('./images/labeling\ of\ data.jpg') no-repeat center center/cover;">
+								style="background: url('./images/Annotation.jpg') no-repeat center center/cover;">
 							</div>
 							<!-- <p>Developing And Designing Websites</p> -->
 						</section>
 						<section class="service-box" data-aos="slide-left">
 							<div class="info">
 								<h3>UI/UX Desigining</h3>
-								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
-									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
-									deserunt saepe. Nobis eaque.</p>
+								<p class="service_para">
+									Are you finding android app or web app UI/UX? Our design team will help you build an engaging product easily and quickly.
+								</p>
 							</div>
 							<div class="img"
 								style="background: url('./images/ui-ux.jpg') no-repeat center center/cover;"></div>
@@ -217,10 +211,9 @@
 						<section class="service-box heiglight" data-aos="fade-down">
 							<div class="info">
 								<h3>Transcription/Translation</h3>
-								<p class="service_para">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-									Doloribus, iure assumenda est corporis quis nam, veniam reiciendis, eius numquam
-									rerum architecto nisi minus. Nesciunt rem a qui perferendis provident dolor eligendi
-									deserunt saepe. Nobis eaque.</p>
+								<p class="service_para">
+									Transcription is another emarging technology our team also make transcription in different rigional
+								</p>
 							</div>
 							<div class="img"
 								style="background: url('./images/transcription.jpg') no-repeat center center/cover;">
@@ -267,10 +260,7 @@
 
 		<!-- Five -->
 		<section id="five" class="wrapper style2 special fade">
-			<iframe
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1842.3759740133262!2d88.35946685791016!3d22.550962973424408!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a0277efa4907f01%3A0x57fee0864c692db4!2sPark%20Street!5e0!3m2!1sen!2sin!4v1661276350675!5m2!1sen!2sin"
-				width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-				referrerpolicy="no-referrer-when-downgrade"></iframe>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1807.6592443210604!2d88.15922909734124!3d25.023263474628425!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39fafd856100b3b7%3A0x6410521d9735a4fd!2sWebel%20IT%20Park%2C%20Malda!5e0!3m2!1sen!2sin!4v1662375840717!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 			<!-- <div class="container">
 				<header>
 					<h2>Magna faucibus lorem diam</h2>
